Bug 492673 - TM: Fix memory pressure measurement, r=brendan.